[package]
name = "nlscan"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"]}
pnet = { workspace = true }
threadpool = { workspace = true }
common = { path = "../../common" }
rand = "0.9.2"
log = "0.4.28"
env_logger = "0.11.8"
pnet_transport = "0.35.0"
colored = "3.0.0"
