[package]
name = "nltrace"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"]}
pnet = { workspace = true }
threadpool = { workspace = true }
common = { path = "../../common"}
blake3 = "1.8.2"
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
